<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--show option menu-->
    <item
        android:id="@+id/todo"
        android:orderInCategory="100"
        android:title="@string/todo"
        app:showAsAction="never"/>
    <item
        android:id="@+id/note"
        android:orderInCategory="100"
        android:title="@string/Note"
        app:showAsAction="never"/>
    <item
        android:id="@+id/otherres"
        android:orderInCategory="100"
        android:title="@string/Resources"
        app:showAsAction="never"/>
    <item
        android:id="@+id/logout"
        android:orderInCategory="100"
        android:title="@string/LOGOUT"
        app:showAsAction="never"/>

</menu>
