<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
   >

    <TextView
        android:id="@+id/textv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="90dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/TotalQ"/>
    <TextView
        android:id="@+id/textv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textv"
        android:layout_below="@+id/textv"
        android:layout_marginTop="120dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/correct"/>
    <TextView
        android:id="@+id/textv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textv2"
        android:layout_below="@+id/textv2"
        android:layout_marginTop="121dp"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/wrong"/>
    <TextView
        android:id="@+id/textv4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textv2"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="80dp"
        android:text="TextView:"/>
    <TextView
        android:id="@+id/textv5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textv4"
        android:layout_alignTop="@+id/textv2"
        android:text="TextView"/>
    <TextView
        android:id="@+id/textv6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textv3"
        android:layout_alignStart="@+id/textv5"
        android:text="TextView"/>
    <Button
        android:id="@+id/sole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:layout_marginTop="500dp"
        android:layout_marginLeft="125dp"
        android:background="#7ddf64"
        android:paddingBottom="20dp"
        android:text="@string/solutionE" />


    <android.support.design.widget.AppBarLayout

        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:theme="@style/AppTheme">

        <android.support.v7.widget.Toolbar

            android:id="@+id/toolbar"

            android:layout_width="match_parent"

            android:layout_height="?attr/actionBarSize"

            android:background="?attr/colorPrimary"

            app:popupTheme="@style/AppTheme"/>



    </android.support.design.widget.AppBarLayout>

</RelativeLayout>